--- a/pom.xml
+++ b/pom.xml
@@ -95,14 +95,14 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>TechLink Academy Releases Nexus Repository</name>
-	      <url>http://3.15.153.198:8081/repository/linkpay-release/</url>
+	      <name>Java_App Release Nexus Repository</name>
+	      <url>http://3.88.28.50:8081/repository/smile-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>TechLink Academy Snapshot Nexus Repository </name>
-	      <url>http://3.15.153.198:8081/repository/linkpay-snapshot/</url>
+	      <name>Java_App Snapshot Nexus Repository </name>
+	      <url>http://3.88.28.50:8081/repository/smile-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
